# CinePP_AI

./: .gitignore  CMakeLists.txt  README.md
resources/: links.csv  movies.csv  ratings.csv  tags.csv
src/: main.cpp
src/DataImport/: DataImport.cpp  DataImport.hpp
src/NeuralNetwork/: NeuralNetwork.cpp  NeuralNetwork.hpp
src/NeuralNetwork/Parts/: NeuralBuildBlocks.cpp  NeuralBuildBlocks.hpp
src/Query/: CeeU.cpp  CeeU.hpp
src/Util/: MathCeeU.hpp
src/Util/DataTypes/: DataTypes.hpp
